src/objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>Air_Flow_Control__c</fullName>
        <label>Air Flow Control</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constant Volume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Address__c</fullName>
        <label>Building Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Climate_Zone__c</fullName>
        <label>Climate Zone</label>
        <picklist>
            <picklistValues>
                <fullName>1A, Very Hot - Humid (Miami, FL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A, Hot - Humid (Houston, TX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B, Hot - Dry (Phoenix, AZ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A, Warm - Humid (Memphis, TN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3B, Warm - Dry (El Paso, TX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3C, Warm - Marine (San Francisco, CA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4A, Mixed - Humid (Baltimore, MD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4B, Mixed - Dry (Albuquerque, NM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4C, Mixed - Marine (Salem, OR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5A, Cool - Humid (Chicago, IL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5B, Cool - Dry (Boise, ID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6A, Cold - Humid (Burlington, VT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6B, Cold - Dry (Helena, MT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7, Very Cold (Duluth, MN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8, Subarctic (Fairbanks, AK)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cooling__c</fullName>
        <label>Cooling</label>
        <picklist>
            <picklistValues>
                <fullName>Central Air Conditioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller - Absorption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller - Uncategorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condenser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling Tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling Tower - Uncategorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Chilled Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaporative Cooler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Pump - Air Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Pump - Uncategorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Pump - Water Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaged Direct Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split AC System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facility_Subtype__c</fullName>
        <label>Facility Subtype</label>
        <picklist>
            <controllingField>Facility_Type__c</controllingField>
            <picklistValues>
                <fullName>Administrative/professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank/Financial Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank/other financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Box (&gt; 50K sf)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College or university</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution/Shipping center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dormitory/fraternity/sorority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary/middle school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclosed mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment/culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire station/police station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funeral home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical, non-diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motel or inn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movie Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-mall other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-refrigerated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banquet Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery store/food market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious worship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Floor_Area_Square_Meters__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Square Meters</description>
        <label>Floor Area</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heating__c</fullName>
        <label>Heating</label>
        <picklist>
            <picklistValues>
                <fullName>Boiler - Hot Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler - Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler - Uncategorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furnace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Pump - Air Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Pump - Uncategorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Pump - Water Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perimeter Baseboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resistance Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <description>Per Week</description>
        <label>Hours Occupied</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lighting__c</fullName>
        <label>Lighting</label>
        <picklist>
            <picklistValues>
                <fullName>Compact Fluorescent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluorescent - T12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluorescent - T5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluorescent - T8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluorescent - Uncategorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halogen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incandescent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercury Vapor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Halide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other / Combination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sodium - High Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sodium - Low Pressure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>My_EUI__c</fullName>
        <formula>( ((My_Usage__c/90)*365) * 3.4121411565 )/ Floor_Area_Square_Meters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My EUI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Usage__c</fullName>
        <label>My Usage</label>
        <summarizedField>Equipment__c.Most_Recent_Average__c</summarizedField>
        <summaryForeignKey>Equipment__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_People__c</fullName>
        <label>Number of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Ceiling__c</fullName>
        <label>Roof Ceiling</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Built-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asphalt/fiberglass/other shingles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cool Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slate or tile shingles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic/rubber/synthetic sheeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood shingles/shakes/other wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpaceURL__c</fullName>
        <label>SpaceURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wall_Insulation_R_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 to 80</description>
        <label>Wall Insulation R-Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Window_Glass_Layer__c</fullName>
        <label>Window Glass Layers</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Single-pane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double-pane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triple-pane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Window_Glass_Type__c</fullName>
        <label>Window Glass Type</label>
        <picklist>
            <picklistValues>
                <fullName>Clear</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other / Combination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reflective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tinted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Building</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BN-{00000000}</displayFormat>
        <label>Building Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>